--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "axios": "^1.3.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "google-tts-api": "^2.0.2",
     "openai": "^3.2.1",
     "telegraf": "^4.12.2"
   }
